--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,15 +11,15 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center_vertical">
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/exit"
+                android:src="@drawable/black_back"
                 android:layout_gravity="center_vertical"/>
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_exit"
