--- a/app/src/main/res/layout/activity_add_into_club.xml
+++ b/app/src/main/res/layout/activity_add_into_club.xml
@@ -21,10 +21,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/exit"
+                android:drawableLeft="@drawable/black_back"
                 android:drawablePadding="2dp"
                 android:text="返回"
-                android:textSize="18dp"/>
+                android:textSize="16dp"
+                android:layout_centerVertical="true"/>
 
         </LinearLayout>
         <android.support.v7.widget.AppCompatTextView
