--- a/app/src/main/res/layout/activity_apply_into_club.xml
+++ b/app/src/main/res/layout/activity_apply_into_club.xml
@@ -20,10 +20,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/exit"
+                android:drawableLeft="@drawable/black_back"
                 android:drawablePadding="2dp"
                 android:text="返回"
-                android:textSize="18dp"/>
+                android:textSize="16dp"/>
 
         </LinearLayout>
         <android.support.v7.widget.AppCompatTextView
