--- a/app/src/main/res/layout/activity_club_user_info.xml
+++ b/app/src/main/res/layout/activity_club_user_info.xml
@@ -14,12 +14,12 @@
             android:id="@+id/tv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/exit"
+            android:drawableLeft="@drawable/black_back"
             android:drawablePadding="2dp"
             android:text="返回"
             android:textSize="18dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"/>
+            android:layout_marginLeft="20dp"/>
 
 
         <android.support.v7.widget.AppCompatTextView
