--- a/app/src/main/res/layout/activity_my_club.xml
+++ b/app/src/main/res/layout/activity_my_club.xml
@@ -13,23 +13,25 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center_vertical">
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/exit"
+                android:src="@drawable/black_back"
+                android:layout_marginLeft="20dp"
                 android:layout_gravity="center_vertical"/>
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="2dp"
                 android:text="返回"
-                android:textSize="18dp"/>
+                android:textSize="16dp"/>
 
         </LinearLayout>
         <android.support.v7.widget.AppCompatTextView
