--- a/app/src/main/res/layout/activity_reset_pwd.xml
+++ b/app/src/main/res/layout/activity_reset_pwd.xml
@@ -12,15 +12,16 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:clickable="true"
                 android:gravity="center_vertical">
                 <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/exit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/exit"
+                    android:src="@drawable/black_back"
                     android:layout_gravity="center_vertical"/>
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_exit"
