--- a/app/src/main/res/layout/activity_select_city.xml
+++ b/app/src/main/res/layout/activity_select_city.xml
@@ -11,15 +11,16 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center_vertical">
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/exit"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/exit"
+                android:drawableLeft="@drawable/black_back"
                 android:layout_gravity="center_vertical"/>
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_exit"
