--- a/app/src/main/res/layout/fragment_quick_game.xml
+++ b/app/src/main/res/layout/fragment_quick_game.xml
@@ -1,41 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical">
 
 
-
-
-    <Button
+    <LinearLayout
         android:id="@+id/btnCreateGame"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:background="@drawable/out_bj">
 
-        android:layout_width="320px"
-        android:layout_height="80px"
-        android:layout_gravity="center"
-        android:background="@drawable/denglu_normal"
-        android:layout_marginTop="200px"
-        android:text="创建游戏" />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/want" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/txCreateGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="创建游戏"
+            android:textSize="20dp"
+            />
+
+    </LinearLayout>
 
 
-
-    <Button
+    <LinearLayout
         android:id="@+id/btnAddintoGame"
-        android:layout_width="320px"
-        android:layout_height="80px"
-        android:layout_gravity="center"
-        android:background="@drawable/denglu_normal"
-        android:layout_marginTop="100px"
-        android:text="加入游戏" />
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:background="@drawable/join_bj">
 
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/join_ico" />
 
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/tvAddintoGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:text="加入游戏"
+            android:textSize="20dp"
+            />
 
-
-
-
-
-
+    </LinearLayout>
 
 </LinearLayout>
 
