--- a/app/src/main/res/layout/layout_me_title.xml
+++ b/app/src/main/res/layout/layout_me_title.xml
@@ -13,7 +13,7 @@
         android:text="返回"
         android:textSize="16dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="20px"/>
+        android:layout_marginLeft="20dp"/>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_title"
