--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -133,7 +133,7 @@
     <color name="bottom_menu_btn_text_stress_color">#FF0000</color>
     <color name="bottom_menu_layout_color">#00000000</color>
 
-    <color name="shop_goldcoin_selected">#4B0082</color>
+    <color name="shop_goldcoin_selected">#003366</color>
     <color name="shop_goldcoin_pic_bg">#708090</color>
 
     <color name="game_play_precent_progress">#ff7e00</color>
@@ -141,5 +141,6 @@
     <color name="game_play_precent_text">#ff7e00</color>
     <color name="game_win_precent_text">#FFD700</color>
     <color name="game_ring_process_bg">#A6A6A6</color>
+    <color name="tabBg">#59D</color>
 
 </resources>
