--- a/app/src/main/res/layout/fragment_fragment_game_set1.xml
+++ b/app/src/main/res/layout/fragment_fragment_game_set1.xml
@@ -9,20 +9,19 @@
          <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-             android:layout_marginTop="30px"
+             android:background="@color/shop_goldcoin_selected"
             android:orientation="vertical">
             <EditText
                 android:id="@+id/et_game_name"
-                android:layout_marginLeft="50px"
-                android:layout_marginRight="50px"
                 android:paddingTop="30px"
-                android:paddingLeft="30px"
                 android:paddingBottom="30px"
-                android:hint="请输入要创建的牌局的房间名称"
+                android:hint="请输入牌局名称"
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#332e4f"
-                android:textSize="18dp"/>
+                android:background="@color/white"
+                android:textColor="@color/gray"
+                android:textSize="14dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,13 +62,12 @@
 
                     <TextView
                         android:id="@+id/tv_min_in"
-                        android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/flower"
+                        android:gravity="center_vertical"
                         android:text="1000"
-                        android:textSize="24dp"
-                        android:textColor="#ad7b43"/>
+                        android:textColor="#ad7b43"
+                        android:textSize="24dp" />
 
 
                 </LinearLayout>
@@ -95,7 +93,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="小盲/大盲"
-                        android:textSize="8dp"/>
+                        android:textColor="@color/white"
+                        android:textSize="12dp"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -108,7 +107,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="最小带入"
-                        android:textSize="8dp"/>
+                        android:textColor="@color/white"
+                        android:textSize="12dp"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -180,22 +180,39 @@
                 android:layout_marginTop="10px"
                 android:gravity="center"
                 android:orientation="vertical">
-                <TextView
-                    android:id="@+id/tv_personl_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="个人财富：0"
-                    android:textSize="18dp"
-                    android:textColor="#c04464"
 
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="个人财富： "
+                        android:textColor="@color/white"
+                        android:textSize="10dp"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_personl_money"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="10dp"
+
+                        />
+
+                </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10px"
                     android:textSize="10dp"
                     android:gravity="center"
-
                     android:text="牌局开始和结束时，系统将自动将金币与记分牌进行兑换"/>
 
             </LinearLayout>
@@ -217,37 +234,39 @@
 
             <Button
                 android:id="@+id/btn_high_grade_set"
-                android:layout_width="240px"
-                android:layout_height="80px"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:background="@drawable/btn_bg_green"
-                android:layout_marginTop="20px"
+                android:gravity="center"
                 android:text="高级设置"
+                android:textSize="14dp"
+                android:background="@drawable/out_bj"
                 android:textColor="@color/white"/>
 
             <TextView
                 android:id="@+id/tv_game_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10px"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="100px"
                 android:layout_marginRight="100px"
                 android:textSize="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-
                 android:text="牌局信息"/>
 
             <Button
                 android:id="@+id/btn_new_game"
-                android:layout_width="480px"
-                android:layout_height="100px"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:background="@drawable/btn_bg_red"
-                android:layout_marginTop="20px"
-                android:text="现在开局"
+                android:background="@drawable/out_bj"
+                android:gravity="center"
+                android:text="开始"
+                android:textSize="12dp"
                 android:textColor="@color/white"/>
-
 
         </LinearLayout>
 
