--- a/app/src/main/res/layout/fragment_quick_game.xml
+++ b/app/src/main/res/layout/fragment_quick_game.xml
@@ -5,20 +5,21 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:id="@+id/btnCreateGame"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:background="@drawable/out_bj">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/want" />
 
         <android.support.v7.widget.AppCompatTextView
@@ -28,8 +29,8 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:text="创建游戏"
-            android:textSize="20dp"
+            android:text="创建牌局"
+            android:textSize="14dp"
             />
 
     </LinearLayout>
@@ -37,16 +38,16 @@
 
     <LinearLayout
         android:id="@+id/btnAddintoGame"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:background="@drawable/join_bj">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:src="@drawable/join_ico" />
 
         <android.support.v7.widget.AppCompatTextView
@@ -56,9 +57,8 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:text="加入游戏"
-            android:textSize="20dp"
-            />
+            android:text="加入牌局"
+            android:textSize="14dp" />
 
     </LinearLayout>
 
