--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -6,20 +6,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:background="@drawable/me_bg"
             android:layout_gravity="center"
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatImageView
-                android:layout_marginTop="50dp"
                 android:id="@+id/iv_user_head"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:src="@drawable/default_club_head"
                 android:layout_gravity="center_horizontal"
                 />
@@ -29,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="用户名"
-                android:textSize="18dp"
+                android:textSize="@dimen/game_record_text_medium_size"
                 android:textColor="@color/white"
                 android:layout_gravity="center_horizontal"/>
             <TextView
@@ -38,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="暂无简介"
-                android:textSize="14dp"
+                android:textSize="@dimen/game_record_text_small_size"
                 android:textColor="@color/white"
                 android:layout_gravity="center_horizontal"/>
             <LinearLayout
