--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -4,14 +4,14 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:orientation="vertical"
-    android:paddingTop="40dp"
+    android:paddingTop="20dp"
     >
 
 
     <ImageView
         android:id="@+id/iv_menu_pic"
-        android:layout_width="150px"
-        android:layout_height="150px"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/default_club_level"
         />
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="菜单"
-            android:textSize="14dp"
+            android:textSize="@dimen/game_record_text_medium_size"
             android:textColor="@color/white"
             android:layout_gravity="center_horizontal"
             />
