--- a/app/src/main/res/layout/activity_game_add.xml
+++ b/app/src/main/res/layout/activity_game_add.xml
@@ -4,7 +4,7 @@
 
     android:layout_height="match_parent">
 
-    <include layout="@layout/layout_me_title"/>
+    <!--<include layout="@layout/layout_me_title"/>-->
 
     <EditText
         android:id="@+id/et_game_id"
