--- a/app/src/main/res/layout/activity_game_history.xml
+++ b/app/src/main/res/layout/activity_game_history.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/layout_me_title"/>
+    <!--<include layout="@layout/layout_me_title"/>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_history"
