--- a/app/src/main/res/layout/activity_game_record.xml
+++ b/app/src/main/res/layout/activity_game_record.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
+        android:visibility="gone"
         android:background="#003366">
 
         <android.support.v7.widget.AppCompatTextView
