--- a/app/src/main/res/layout/activity_my_club.xml
+++ b/app/src/main/res/layout/activity_my_club.xml
@@ -10,6 +10,7 @@
         android:id="@+id/layout_top"
         android:layout_height="40dip"
         android:background="#003366"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <LinearLayout
