--- a/app/src/main/res/layout/activity_select_province.xml
+++ b/app/src/main/res/layout/activity_select_province.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dip"
         android:background="#003366"
+        android:visibility="gone"
         android:orientation="vertical">
 
         <LinearLayout
