--- a/app/src/main/res/layout/activity_sys_config.xml
+++ b/app/src/main/res/layout/activity_sys_config.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
+        android:visibility="gone"
         android:background="#003366"
         >
 
