--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,102 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
-        android:background="@drawable/background"
-        android:orientation="vertical"
-        >
-        <android.support.v7.widget.AppCompatAutoCompleteTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="V1.00"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="登录"
+        android:textColor="@color/white"
+        android:textSize="18dp" />
 
-            android:layout_gravity="right"/>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-         >
-        <android.support.design.widget.TextInputEditText
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_vertical"
+        android:background="@null"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:hint="用户名"
-            android:layout_marginTop="20px"/>
-        <android.support.design.widget.TextInputEditText
+            android:drawableLeft="@drawable/login_phone"
+            android:gravity="left|bottom"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:hint="    账户" />
+
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/edPWD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:hint="密码"
-            android:layout_marginTop="20px"/>
-
+            android:drawableLeft="@drawable/login_password"
+            android:gravity="left|bottom"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            android:textColorHint="@color/gray"
+            android:backgroundTint="@color/white"
+            android:hint="    密码" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="480px"
-            android:layout_height="80px"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="@drawable/denglu_normal"
-            android:layout_marginTop="20px"
-            android:text="登录" />
-
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_red"
+            android:text="登录"
+            android:textColor="@color/white"
+            android:textSize="18dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:layout_marginTop="20px"
-            >
+            android:orientation="horizontal">
+
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tvNewUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:text="新用户注册 > "/>
+                android:text="新用户注册 > "
+                android:textColor="@color/white"
+                android:textSize="14dp" />
+
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="14dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="|"
-                android:layout_marginLeft="20px"
-                android:layout_marginRight="20px"/>
+                android:textColor="@color/white" />
+
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tvForgetPWD"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16dp"
-                android:text=" 忘记密码 ? >"/>
+                android:text=" 忘记密码 >"
+                android:textColor="@color/white"
+                android:textSize="14dp" />
         </LinearLayout>
+
         <android.support.v7.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-----其他登录-----"
-            android:textSize="16dp"
-            android:layout_marginTop="20px"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="-----其他登录 -----"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
+
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20px"
-            android:src="@drawable/com_facebook_button_icon_blue"/>
+            android:layout_marginTop="20dp"
+            android:src="@drawable/login_wechat" />
     </LinearLayout>
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
 
