--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@drawable/background">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
-        android:background="#003366"
-        android:visibility="gone"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/register_page_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:gravity="center_vertical">
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/exit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/black_back"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
-                android:layout_gravity="center_vertical"/>
+                android:src="@drawable/black_back" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_exit"
@@ -32,84 +31,137 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="2dp"
                 android:text="返回"
-                android:textSize="16dp"/>
+                android:textColor="@color/white"
+                android:textSize="16dp" />
 
         </LinearLayout>
+
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:text="注册"
-            android:textSize="24dp"
-            android:layout_centerInParent="true"/>
-
-
+            android:textColor="@color/white"
+            android:textSize="18dp" />
 
     </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        >
 
-        <LinearLayout
+    <TextView
+        android:id="@+id/register_new"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="70dp"
+        android:text="创建新用户"
+        android:textSize="17dp"
+        android:textColor="@color/white"/>
+
+    <LinearLayout
+        android:id="@+id/register_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        >
-            <android.support.v7.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="手机号："/>
-            <android.support.design.widget.TextInputEditText
-                    android:id="@+id/et_username"
+        android:layout_below="@+id/register_new"
+        android:paddingTop="70dp"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/register_page_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="left|bottom"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/gray"
+            android:hint="手机号码" />
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/register_page_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:inputType="textPassword"
+            android:gravity="left|bottom"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/gray"
+            android:hint="设置密码" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/register_page_verify_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLength="20" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center"
-           >
+                android:layout_gravity="center"
+                android:layout_alignParentLeft="true"
+                android:layout_marginTop="10dp"
+                android:gravity="left|bottom"
+                android:inputType="number"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/gray"
+                android:hint="验证码" />
             <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/register_page_get_verify_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="验证码："/>
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_verify_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:gravity="left"
-                android:maxLength="20"
-                android:layout_weight="1"
-                />
-
-            <Button
-                android:layout_gravity="right"
-                android:id="@+id/btn_ask_verify_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/register_page_get_verify_code"
                 android:text="获取验证码"
-                android:background="?android:selectableItemBackground"
-                />
-        </LinearLayout>
+                android:textSize="12dp"
+                android:gravity="center"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
 
-        <Button
-            android:id="@+id/btn_next"
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/register_page_set_nick_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:text="下一步" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="36dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="left|bottom"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/gray"
+            android:hint="设置昵称，方便好友认出你" />
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/register_page_complete"
+        android:layout_below="@+id/register_text"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/button_red"
+        android:text="注册完成"
+        android:textColor="@color/white"
+        android:textSize="18dp" />
 
-</LinearLayout>
+
+</RelativeLayout>
