修复登陆、注册、商店页面在小米手机上显示的BUG

--- a/app/src/main/res/drawable/shop_goldicon_bg.xml
+++ b/app/src/main/res/drawable/shop_goldicon_bg.xml
@@ -2,7 +2,7 @@
 <shape  xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#CDB5CD"></solid>
+    <solid android:color="@color/main_bg_secondary"></solid>
     <size
         android:width="70dp"
         android:height="70dp"></size>
