--- a/app/src/main/res/layout/fragment_me_layout.xml
+++ b/app/src/main/res/layout/fragment_me_layout.xml
@@ -126,6 +126,7 @@
             android:id="@+id/rv_menu_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/main_bg_secondary"
             android:paddingTop="15dp"
             android:scrollbars="vertical"/>
     </LinearLayout>
