--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -127,6 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="15dp"
+            android:background="@color/main_bg_secondary"
             android:scrollbars="vertical"/>
     </LinearLayout>
 </RelativeLayout>
