--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:orientation="vertical"
-    android:paddingTop="20dp"
-    >
+    android:paddingTop="20dp">
 
 
     <ImageView
@@ -13,24 +12,16 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/default_club_level"
-        />
+        android:src="@drawable/default_club_level" />
 
-        <TextView
-            android:id="@+id/tv_menu_name"
-            android:layout_marginTop="10px"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="菜单"
-            android:textSize="@dimen/game_record_text_medium_size"
-            android:textColor="@color/white"
-            android:layout_gravity="center_horizontal"
-            />
+    <TextView
+        android:id="@+id/tv_menu_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:text="菜单"
+        android:textColor="@color/white"
+        android:textSize="@dimen/game_record_text_medium_size" />
 
-
-
-        </LinearLayout>
-
-
-
-
+</LinearLayout>
