--- a/app/src/main/res/layout/activity_buy_diamond.xml
+++ b/app/src/main/res/layout/activity_buy_diamond.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black">
+    android:background="@color/main_bg_secondary">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dip"
